--- a/MERCADO-ESCOLAR/angular.json
+++ b/MERCADO-ESCOLAR/angular.json
@@ -26,7 +26,10 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "src/assets/js/navindex.js"
+            ]
           },
           "configurations": {
             "production": {
